--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
         </div>
         <div class="m-auto text-2xl font-semibold">Organize Your Files</div>
         <div class="my-auto px-6">
-            <img src="Public/Avatar.png" alt="CN" width={100} height={100}
+            <img src="/Public/Avatar.png" alt="CN" width="100" height="100"
                 class="relative flex h-10 w-10 shrink-0 overflow-hidden rounded-full" />
         </div>
     </header>
