--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                 <a key="dropbox" href="/dropbox"
                     class="text-xl font-semibold hover:bg-slate-600 p-2 hover:cursor-pointer rounded-md active:ring-2 active:bg-slate-600 focus-within:bg-slate-600 focus-within:ring-2 ring-slate-200">
                     <div class="flex justify-between">
-                        dropbox
+                        Dropbox
                         <div
                             class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-[#2563eb] text-[#f8fafc] hover:bg-[#2563eb]/80">
                             123</div>
