--- a/Views/PCloud/FileView.cshtml
+++ b/Views/PCloud/FileView.cshtml
@@ -16,6 +16,6 @@ ViewBag.Title = "File";
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
