--- a/Views/PCloud/Index.cshtml
+++ b/Views/PCloud/Index.cshtml
@@ -1,108 +1,58 @@
 @model IEnumerable<FiDa.Models.FileUpload>
-    @{
-    ViewData["Title"] = "pCloud";
-    }
+@{
+	ViewData["Title"] = "pCloud";
+}
 
-    <div class="p-4">
-        <div class="pb-4 flex justify-between">
-            <span class="text-5xl font-semibold">pCloud</span>
-            <img src="/Public/pCloud.jpg" alt="pCloud" width="50" height="50" />
-        </div>
-        <hr class="bg-slate-600 rounded-full h-2" />
+<div class="p-4">
+	<div class="pb-4 flex justify-between">
+		<span class="text-5xl font-semibold">pCloud</span>
+		<img src="/Public/pCloud.jpg" alt="pCloud" width="50" height="50" />
+	</div>
+	<hr class="bg-slate-600 rounded-full h-2" />
 
-        <div class="relative overflow-x-auto">
-            <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-                <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-                    <tr>
-                        <th scope="col" class="px-6 py-3">
-                            Filename
-                        </th>
-                        <th scope="col" class="px-6 py-3">
-                            Size
-                        </th>
-                        <th scope="col" class="px-6 py-3">
-                            Host
-                        </th>
-                        <th scope="col" class="px-6 py-3">
-                            Modification Date
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var file in Model){
-                    <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-                        <td class="px-6 py-4">@Html.DisplayFor(modelitem => file.FileName)</td>
-                        <td class="px-6 py-4">@Html.DisplayFor(modelitem => file.Size)</td>
-                        <td class="px-6 py-4">@Html.DisplayFor(modelitem => file.Host)</td>
-                        <td class="px-6 py-4">@Html.DisplayFor(modelitem => file.ModificationDate)</td>
-                    </tr>
-                    }
-                </tbody>
-            </table>
+	<div class="relative overflow-x-auto py-4">
+		<table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+			<thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+				<tr>
+					<th scope="col" class="px-6 py-3">
+						Filename
+					</th>
+					<th scope="col" class="px-6 py-3">
+						Size
+					</th>
+					<th scope="col" class="px-6 py-3">
+						Host
+					</th>
+					<th scope="col" class="px-6 py-3">
+						Modification Date
+					</th>
+				</tr>
+			</thead>
+			<tbody>
+			</tbody>
+		</table>
+	</div>
 
-            <!-- Modal toggle -->
-            <button data-modal-target="default-modal" data-modal-toggle="default-modal"
-                class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                type="button">
-                Upload a file!
-            </button>
+	<div class="py-4">
+		<!-- Modal toggle -->
+		<button data-modal-target="static-modal" data-modal-toggle="static-modal"
+				class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+				type="button"
+				onclick="@Html.RenderPartial("_UploadFile")"
+				id="toggle-modal-button">
+			Upload a file!
+		</button>
+	</div>
 
-            <!-- Main modal -->
-            <div id="default-modal" tabindex="-1" aria-hidden="true"
-                class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
-                <div class="relative p-4 w-full max-w-2xl max-h-full">
-                    <!-- Modal content -->
-                    <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
-                        <!-- Modal header -->
-                        <div
-                            class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
-                            <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
-                                Terms of Service
-                            </h3>
-                            <button type="button"
-                                class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
-                                data-modal-hide="default-modal">
-                                <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-                                    viewBox="0 0 14 14">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                        stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
-                                </svg>
-                                <span class="sr-only">Close modal</span>
-                            </button>
-                        </div>
-                        <!-- Modal body -->
-                        @using(Html.BeginForm("UploadFile","Upload", FormMethod.Post, new {
-                        enctype="multipart/form-data"}))
-                        {
-                        <div class="flex items-center justify-center w-full">
-                            <label for="dropzone-file"
-                                class="flex flex-col items-center justify-center w-full h-64 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer bg-gray-50 dark:hover:bg-bray-800 dark:bg-gray-700 hover:bg-gray-100 dark:border-gray-600 dark:hover:border-gray-500 dark:hover:bg-gray-600">
-                                <div class="flex flex-col items-center justify-center pt-5 pb-6">
-                                    <svg class="w-8 h-8 mb-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
-                                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 16">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                            stroke-width="2"
-                                            d="M13 13h3a3 3 0 0 0 0-6h-.025A5.56 5.56 0 0 0 16 6.5 5.5 5.5 0 0 0 5.207 5.021C5.137 5.017 5.071 5 5 5a4 4 0 0 0 0 8h2.167M10 15V6m0 0L8 8m2-2 2 2" />
-                                    </svg>
-                                    <p class="mb-2 text-sm text-gray-500 dark:text-gray-400"><span
-                                            class="font-semibold">Click to upload</span> or drag and drop</p>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">SVG, PNG, JPG or GIF (MAX.
-                                        800x400px)</p>
-                                </div>
-                                <input id="dropzone-file" type="file" class="hidden" />
-                            </label>
-                        </div>
-                        }
-                    </div>
-                </div>
-            </div>
+	<script>
+		["toggle-modal-button", "close-modal-button"].forEach((id) => {
+			document.getElementById(id).addEventListener("click", () => {
+				const classes = document.getElementById("static-modal").classList;
+				classes.contains("hidden")
+					? classes.remove(classes.remove("hidden"))
+					: classes.add("hidden");
+			})
+		})
+	</script>
 
-
-
-
-
-
-
-        </div>
-
-    </div>
+</div>
