--- a/Views/PCloud/Index.cshtml
+++ b/Views/PCloud/Index.cshtml
@@ -1,67 +1,67 @@
 @model IEnumerable<FiDa.Models.FileUpload>
-	@{
+@{
 	ViewData["Title"] = "pCloud";
-	}
+}
 
-	<div class="p-4">
-		<div class="pb-4 flex justify-between">
-			<span class="text-5xl font-semibold">pCloud</span>
-			<img src="/Public/pCloud.jpg" alt="pCloud" width="50" height="50" />
-		</div>
-		<hr class="bg-slate-600 rounded-full h-2" />
+<div class="p-4">
+	<div class="pb-4 flex justify-between">
+		<span class="text-5xl font-semibold">pCloud</span>
+		<img src="/Public/pCloud.jpg" alt="pCloud" width="50" height="50" />
+	</div>
+	<hr class="bg-slate-600 rounded-full h-2" />
 
-		<div class="relative overflow-x-auto py-4">
-			<table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-				<thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-					<tr>
-						<th scope="col" class="px-6 py-3">
-							Filename
-						</th>
-						<th scope="col" class="px-6 py-3">
-							Size
-						</th>
-						<th scope="col" class="px-6 py-3">
-							Host
-						</th>
-						<th scope="col" class="px-6 py-3">
-							Modification Date
-						</th>
-					</tr>
-				</thead>
-				<tbody>
-				</tbody>
-			</table>
-		</div>
+	<div class="relative overflow-x-auto py-4">
+		<table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+			<thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+				<tr>
+					<th scope="col" class="px-6 py-3">
+						Filename
+					</th>
+					<th scope="col" class="px-6 py-3">
+						Size
+					</th>
+					<th scope="col" class="px-6 py-3">
+						Host
+					</th>
+					<th scope="col" class="px-6 py-3">
+						Modification Date
+					</th>
+				</tr>
+			</thead>
+			<tbody>
+			</tbody>
+		</table>
+	</div>
 
-		<div class="py-4">
-			<!-- Modal toggle -->
-			<button data-modal-target="static-modal" data-modal-toggle="static-modal"
+	<div class="py-4">
+		<!-- Modal toggle -->
+		<button data-modal-target="static-modal" data-modal-toggle="static-modal"
 				class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
 				type="button" id="toggle-modal-button">
-				Upload a file!
-			</button>
+			Upload a file!
+		</button>
+	</div>
+
+	<!-- Main modal -->
+	<div id="static-modal" data-modal-backdrop="static" tabindex="-1" aria-hidden="true"
+		 class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+		<div class="m-auto p-4 w-full max-w-2xl max-h-full">
+			<!-- Modal content -->
+			<partial name="../Shared/_UploadFile.cshtml" />
 		</div>
-
-		<!-- Main modal -->
-		<div id="static-modal" data-modal-backdrop="static" tabindex="-1" aria-hidden="true"
-			class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
-			<div class="relative p-4 w-full max-w-2xl max-h-full">
-				<!-- Modal content -->
-				@Html.Partial("_UploadFile")
-			</div>
-
-		</div>
-
-
-		<script>
-			["toggle-modal-button", "close-modal-button", "cancel-upload-button"].forEach((id) => {
-				document.getElementById(id).addEventListener("click", () => {
-					const classes = document.getElementById("static-modal").classList;
-					classes.contains("hidden")
-						? classes.remove(classes.remove("hidden"))
-						: classes.add("hidden");
-				})
-			})
-		</script>
 
 	</div>
+
+
+	<script>
+		["toggle-modal-button", "close-modal-button", "cancel-upload-button"].forEach((id) => {
+			document.getElementById(id).addEventListener("click", () => {
+				const classes = document.getElementById("static-modal").classList;
+				classes.contains("hidden")
+					? classes.remove(classes.remove("hidden"))
+					: classes.add("hidden");
+			})
+		})
+	</script>
+
+</div>
