--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -2,68 +2,68 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - FiDa</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>@ViewData["Title"] - FiDa</title>
+	<script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-slate-900 text-slate-200">
-    <header class="border-slate-600 border-b-2 flex h-full items-center">
-        <div class="font-bold text-3xl h-full border-slate-600  w-72 border-r-2 px-8 flex items-center justify-center">
-            <a href="/" class="flex items-center justify-center hover:bg-slate-600 rounded-lg p-4">
-                FiDa
-            </a>
-        </div>
-        <div class="m-auto text-2xl font-semibold">Organize Your Files</div>
-        <div class="my-auto px-6">
-            <img src="/Public/Avatar.png" alt="CN" width="100" height="100"
-                class="relative flex h-10 w-10 shrink-0 overflow-hidden rounded-full" />
-        </div>
-    </header>
+<body class="bg-slate-900 text-slate-200 dark">
+	<header class="border-slate-600 border-b-2 flex h-full items-center">
+		<div class="font-bold text-3xl h-full border-slate-600  w-72 border-r-2 px-8 flex items-center justify-center">
+			<a href="/" class="flex items-center justify-center hover:bg-slate-600 rounded-lg p-4">
+				FiDa
+			</a>
+		</div>
+		<div class="m-auto text-2xl font-semibold">Organize Your Files</div>
+		<div class="my-auto px-6">
+			<img src="/Public/Avatar.png" alt="CN" width="100" height="100"
+				 class="relative flex h-10 w-10 shrink-0 overflow-hidden rounded-full" />
+		</div>
+	</header>
 
-    <div class="flex min-h-full min-w-full">
-        <nav class="border-r-2 border-slate-600 h-screen min-w-72 p-6">
-            <div class="grid grid-cols-1 gap-2">
-                <a key="pcloud" href="/pcloud"
-                    class=" text-xl font-semibold hover:bg-slate-600 p-2 hover:cursor-pointer rounded-md active:ring-2 active:bg-slate-600 focus-within:bg-slate-600 focus-within:ring-2 ring-slate-200">
-                    <div class="flex justify-between">
-                        pCLoud
-                        <div
-                            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-[#2563eb] text-[#f8fafc] hover:bg-[#2563eb]/80">
-                            123</div>
-                    </div>
-                </a>
-                <a key="dropbox" href="/dropbox"
-                    class="text-xl font-semibold hover:bg-slate-600 p-2 hover:cursor-pointer rounded-md active:ring-2 active:bg-slate-600 focus-within:bg-slate-600 focus-within:ring-2 ring-slate-200">
-                    <div class="flex justify-between">
-                        Dropbox
-                        <div
-                            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-[#2563eb] text-[#f8fafc] hover:bg-[#2563eb]/80">
-                            123</div>
-                    </div>
-                </a>
-                <a key="onedrive" href="/onedrive"
-                    class="text-xl font-semibold hover:bg-slate-600 p-2 hover:cursor-pointer rounded-md active:ring-2 active:bg-slate-600 focus-within:bg-slate-600 focus-within:ring-2 ring-slate-200">
-                    <div class="flex justify-between">
-                        One Drive
-                        <div
-                            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-[#2563eb] text-[#f8fafc] hover:bg-[#2563eb]/80">
-                            123</div>
-                    </div>
-                </a>
-            </div>
-        </nav>
-        <main role="main" class="min-h-full p-4 w-full">
-            @RenderBody()
-        </main>
-    </div>
+	<div class="flex min-h-full min-w-full">
+		<nav class="border-r-2 border-slate-600 h-screen min-w-72 p-6">
+			<div class="grid grid-cols-1 gap-2">
+				<a key="pcloud" href="/pcloud"
+				   class=" text-xl font-semibold hover:bg-slate-600 p-2 hover:cursor-pointer rounded-md active:ring-2 active:bg-slate-600 focus-within:bg-slate-600 focus-within:ring-2 ring-slate-200">
+					<div class="flex justify-between">
+						pCLoud
+						<div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-[#2563eb] text-[#f8fafc] hover:bg-[#2563eb]/80">
+							123
+						</div>
+					</div>
+				</a>
+				<a key="dropbox" href="/dropbox"
+				   class="text-xl font-semibold hover:bg-slate-600 p-2 hover:cursor-pointer rounded-md active:ring-2 active:bg-slate-600 focus-within:bg-slate-600 focus-within:ring-2 ring-slate-200">
+					<div class="flex justify-between">
+						Dropbox
+						<div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-[#2563eb] text-[#f8fafc] hover:bg-[#2563eb]/80">
+							123
+						</div>
+					</div>
+				</a>
+				<a key="onedrive" href="/onedrive"
+				   class="text-xl font-semibold hover:bg-slate-600 p-2 hover:cursor-pointer rounded-md active:ring-2 active:bg-slate-600 focus-within:bg-slate-600 focus-within:ring-2 ring-slate-200">
+					<div class="flex justify-between">
+						One Drive
+						<div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-[#2563eb] text-[#f8fafc] hover:bg-[#2563eb]/80">
+							123
+						</div>
+					</div>
+				</a>
+			</div>
+		</nav>
+		<main role="main" class="min-h-full p-4 w-full">
+			@RenderBody()
+		</main>
+	</div>
 
-    <footer class="border-t-2 border-slate-600 p-10">
-        <div class="text-xl h-full flex items-center justify-center">
-            &copy; All rights reserved.
-        </div>
-    </footer>
+	<footer class="border-t-2 border-slate-600 p-10">
+		<div class="text-xl h-full flex items-center justify-center">
+			&copy; All rights reserved.
+		</div>
+	</footer>
 
 </body>
 
