--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>@ViewData["Title"] - FiDa</title>
 	<script src="https://cdn.tailwindcss.com"></script>
+	<link rel="stylesheet" href="magnific-popup/magnific-popup.css">
 </head>
 
 <body class="bg-slate-900 text-slate-200 dark">
