--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 	<div class="flex min-h-full min-w-full">
 		<nav class="border-r-2 border-slate-600 h-screen min-w-72 p-6">
 			<div class="grid grid-cols-1 gap-2">
-				<a key="pcloud" href="/pcloud"
+				<a key="PCloud" href="/PCloud"
 				   class=" text-xl font-semibold hover:bg-slate-600 p-2 hover:cursor-pointer rounded-md active:ring-2 active:bg-slate-600 focus-within:bg-slate-600 focus-within:ring-2 ring-slate-200">
 					<div class="flex justify-between">
 						pCLoud
@@ -35,7 +35,7 @@
 						</div>
 					</div>
 				</a>
-				<a key="dropbox" href="/dropbox"
+				<a key="Dropbox" href="/Dropbox"
 				   class="text-xl font-semibold hover:bg-slate-600 p-2 hover:cursor-pointer rounded-md active:ring-2 active:bg-slate-600 focus-within:bg-slate-600 focus-within:ring-2 ring-slate-200">
 					<div class="flex justify-between">
 						Dropbox
@@ -44,7 +44,7 @@
 						</div>
 					</div>
 				</a>
-				<a key="onedrive" href="/onedrive"
+				<a key="Onedrive" href="/Onedrive"
 				   class="text-xl font-semibold hover:bg-slate-600 p-2 hover:cursor-pointer rounded-md active:ring-2 active:bg-slate-600 focus-within:bg-slate-600 focus-within:ring-2 ring-slate-200">
 					<div class="flex justify-between">
 						One Drive
