--- a/Views/PCloud/Index.cshtml
+++ b/Views/PCloud/Index.cshtml
@@ -4,13 +4,12 @@
 }
 
 <div class="p-4">
-	<div class="pb-4 flex justify-between">
-		<div class="flex justify-center space-x-2">
-			<span class="text-5xl font-semibold">pCloud</span>
-			<a class="hover:bg-gray-800 p-2 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm text-center dark:hover:bg-gray-700 dark:focus:ring-gray-800" id="sync" href="@Url.Action("SyncRepo","pcloud")">
-				<svg fill="currentColor" version="1.1" id="Uploaded to svgrepo.com" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-					 viewBox="0 0 32 32" xml:space="preserve" class="text-white" width="2rem" height="2rem">
-				<path d="M30,16c0,3.279-2.631,5.939-5.896,5.995l-0.629-0.001C23.22,25.905,19.975,29,16,29
+	<div class="flex items-center space-x-2 pb-4">
+		<span class="text-5xl font-semibold">pCloud</span>
+		<a class="hover:bg-gray-800 p-2 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm text-center dark:hover:bg-gray-700 dark:focus:ring-gray-800" id="sync" href="@Url.Action("SyncRepo","pcloud")">
+			<svg fill="currentColor" version="1.1" id="Uploaded to svgrepo.com" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+				 viewBox="0 0 32 32" xml:space="preserve" class="text-white" width="2rem" height="2rem">
+			<path d="M30,16c0,3.279-2.631,5.939-5.896,5.995l-0.629-0.001C23.22,25.905,19.975,29,16,29
 							c-2.464,0-4.634-1.201-6-3.036V27.5c0,0.276-0.224,0.5-0.5,0.5S9,27.776,9,27.5V24h3.5c0.276,0,0.5,0.224,0.5,0.5S12.776,25,12.5,25
 							h-1.955c1.157,1.798,3.162,3,5.455,3c3.418,0,6.222-2.653,6.475-6.008L9.528,21.974C9.515,21.817,9.5,21.66,9.5,21.5
 							c0-3.584,2.916-6.5,6.5-6.5c2.292,0,4.298,1.202,5.454,3H19.5c-0.276,0-0.5,0.224-0.5,0.5s0.224,0.5,0.5,0.5H23v-3.5
@@ -18,9 +17,7 @@
 							c0,0.16,0.01,0.316,0.022,0.473l-0.061,0C4.848,21.697,2,18.684,2,15c0-3.613,2.738-6.585,6.252-6.959C9.127,4.572,12.259,2,16,2
 							c4.418,0,8,3.582,8,8C27.314,10,30,12.686,30,16z" />
 					</svg>
-			</a>
-		</div>
-		<img src="~/Public/pCloud.jpg" alt="pCloud" width="50" height="50" />
+		</a>
 	</div>
 	<hr class="bg-slate-600 rounded-full h-2" />
 
@@ -28,19 +25,17 @@
 		<table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
 			<thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
 				<tr>
-					<th scope="col" class="px-6 py-3">
+					<th scope="col" class="p-4 max-w-5" />
+					<th scope="col" class="p-4">
 						Filename
 					</th>
-					<th scope="col" class="px-6 py-3">
+					<th scope="col" class="p-4">
 						Size
 					</th>
-					<th scope="col" class="px-6 py-3">
-						Host
-					</th>
-					<th scope="col" class="px-6 py-3">
+					<th scope="col" class="p-4">
 						Modified
 					</th>
-					<th scope="col" class="px-6 py-3">
+					<th scope="col" class="p-4">
 						Uploaded
 					</th>
 				</tr>
@@ -49,11 +44,36 @@
 				@foreach (var file in Model)
 				{
 					<tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-						<td class="px-6 py-4">@Html.DisplayFor(modelitem => file.FileName)</td>
-						<td class="px-6 py-4">@Html.DisplayFor(modelitem => file.Size)</td>
-						<td class="px-6 py-4 max-w-4">@Html.DisplayFor(modelitem => file.Host)</td>
-						<td class="px-6 py-4 max-w-4">@Html.DisplayFor(modelitem => file.ModificationDate)</td>
-						<td class="px-6 py-4 max-w-4">@Html.DisplayFor(modelitem => file.CreatedDate)</td>
+						<td class="p-4 max-w-5">
+							@if (file.IsFolder)
+							{
+								<svg fill="currentColor" width="2rem" height="2rem" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg">
+									<title>folder</title>
+									<path d="M8.431 9.155h20.958c2.158 0 2.158-2.238 0.084-2.238h-14.486c-0.83 0-1.244-1.244-1.244-1.244s-0.581-1.825-1.743-1.825h-10.789c-1.576 0-1.162 1.825-1.162 1.825s2.407 20.47 2.573 21.715 1.453 1.612 1.453 1.612l2.821-18.103c0.208-1.327 1.12-1.7 1.535-1.742zM33.658 9.942h-24.563c-0.733 0-1.328 0.594-1.328 1.327l-2.572 16.4c0 0.734 0.595 1.328 1.328 1.328h24.563c0.732 0 1.328-0.594 1.328-1.328l2.572-16.4c0-0.733-0.593-1.327-1.328-1.327z"></path>
+								</svg>
+							}
+							else
+							{
+								<svg fill="currentColor" width="2rem" height="2rem" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
+									<title>file2</title>
+									<path d="M11 15h1v-1h-1v1zM11 18h1v-1h-1v1zM11 12h1v-1h-1v1zM11 21h1v-1h-1v1zM11 24h1v-1h-1v1zM13 18h8v-1h-8v1zM13 12h8v-1h-8v1zM20.938 4h-13.938v24h18v-20l-4.062-4zM23 25.938h-14v-19.938h10v2.938h4v17zM13 21h8v-1h-8v1zM13 15h8v-1h-8v1zM13 24h8v-1h-8v1z"></path>
+								</svg>
+							}
+
+						</td>
+						<td class="p-4">
+							@if (file.IsFolder)
+							{
+								@Html.ActionLink(file.FileName, "Index", "PCloud", file.FileId)
+							}
+							else
+							{
+								@Html.DisplayFor(modelitem => file.FileName)
+							}
+						</td>
+						<td class="p-4">@Html.DisplayFor(modelitem => file.Size)</td>
+						<td class="p-4 max-w-4">@Html.DisplayFor(modelitem => file.ModificationDate)</td>
+						<td class="p-4 max-w-4">@Html.DisplayFor(modelitem => file.CreationDate)</td>
 					</tr>
 				}
 			</tbody>
