--- a/Views/PCloud/Index.cshtml
+++ b/Views/PCloud/Index.cshtml
@@ -82,58 +82,76 @@
 
 	<div class="py-4">
 		<!-- Modal toggle -->
-		<button class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-				type="button" id="toggle-modal-button" name="toggle-modal-button">
+		<button popovertarget="modal-content" class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+				type="button">
 			Upload a file!
 		</button>
+		@if (TempData != null && TempData["Errors"] != null)
+		{
+			var errors = (string[])TempData["Errors"];
+			foreach (var err in errors)
+			{
+				<p class="p-2 text-red-400 font-semibold">@err</p>
+
+			}
+		}
 	</div>
 
 	<!-- Main modal -->
-	<div id="static-modal" data-modal-backdrop="static" tabindex="-1" aria-hidden="true"
-		 class="overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full"
-		 style="display: none;">
-		<div class="m-auto p-4 w-full max-w-2xl max-h-full">
-			<!-- Modal content -->
-			<div id="modal-content" name="modal-content" class="relative bg-white rounded-lg shadow dark:bg-gray-700 antialiased"></div>
+	<div popover="manual" id="modal-content" class="m-auto p-4 w-full max-w-2xl max-h-full">
+		<!-- Modal content -->
+		<div class="relative bg-white rounded-lg shadow dark:bg-gray-700 antialiased">
+			<div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
+				<h3 class="text-xl font-semibold text-gray-900 dark:text-white">
+					Upload a File to PCloud
+				</h3>
+				<button popovertargetaction="hide" type="button"
+						class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white">
+					<svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+							  d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+					</svg>
+					<span class="sr-only">Close modal</span>
+				</button>
+			</div>
+			<!-- Modal body -->
+			<div class="flex items-center justify-center w-full p-4">
+				@using (Html.BeginForm("UploadFile", "pcloud", FormMethod.Post, new
+				{
+					enctype = "multipart/form-data",
+					@class = "w-full"
+				}))
+				{
+					<div class="p-4 space-y-4">
+						<label for="Folder" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Select a Folder</label>
+						<select id="Folder" name="Folder" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+							<option selected value="0">Root</option>
+							<option value="1">Pictures</option>
+							<option value="2">Videos</option>
+							<option value="3">Music</option>
+						</select>
+						<input class="block w-full text-sm font-medium text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
+						   id="Files" name="Files" type="file" multiple="multiple" required>
+						@if (@ViewBag.Message != null)
+						{
+							<p class="p-2 text-red-400">@ViewBag.Message</p>
+						}
+					</div>
+					<!-- Modal footer -->
+					<div class="flex items-center border-t border-gray-200 rounded-b dark:border-gray-600">
+						<div class="p-4">
+							<button data-modal-hide="default-modal" type="submit"
+								class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+								Submit File
+							</button>
+							<button popovertargetaction="hide" data-modal-hide="default-modal" type="reset" id="cancel-upload-button"
+								class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+								Cancel
+							</button>
+						</div>
+					</div>
+				}
+			</div>
 		</div>
 	</div>
-
-	<script type="text/javascript">
-		/*
-		["toggle-modal-button", "close-modal-button", "cancel-upload-button"].forEach((id) => {
-		document.getElementById(id).addEventListener("click", () => {
-		const classes = document.getElementById("static-modal").classList;
-		classes.contains("hidden")
-		? classes.remove(classes.remove("hidden"))
-		: classes.add("hidden");
-		})
-		})*/
-		$(document).ready(function() {
-			$("#toggle-modal-button").click(function() {
-				$.ajax({
-					type: "POST",
-					url: "/pcloud/UploadFile",
-					contentType: "application/json; charset=utf-8",
-					data: null,
-					datatype: "json",
-					success: function(data) {
-						$('#modal-content').html(data);
-						//$('#static-modal').modal({ "backdrop": "static", keyboard: true });
-						$('#static-modal').show();
-
-					},
-					error: function() {
-						alert("Dynamic content load failed.");
-					}
-				});
-			});
-			//$("#closebtn").on('click',function(){
-			//    $('#myModal').modal('hide');
-
-			$("#close-modal-button").click(function() {
-				$('#static-modal').modal('hide');
-			});
-		});
-	</script>
-
 </div>
