--- a/Views/PCloud/Index.cshtml
+++ b/Views/PCloud/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<FiDa.ViewModels.FileUpload>
+@model FiDa.ViewModels.FileViewModel
 @{
 	ViewData["Title"] = "pCloud";
 }
@@ -41,7 +41,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				@foreach (var file in Model)
+				@foreach (var file in Model.RootFiles)
 				{
 					<tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
 						<td class="p-4 max-w-5">
@@ -72,8 +72,8 @@
 							}
 						</td>
 						<td class="p-4">@Html.DisplayFor(modelitem => file.Size)</td>
-						<td class="p-4 max-w-4">@Html.DisplayFor(modelitem => file.ModificationDate)</td>
-						<td class="p-4 max-w-4">@Html.DisplayFor(modelitem => file.CreationDate)</td>
+						<td class="p-4 max-w-4">@Html.DisplayFor(modelitem => file.Modified)</td>
+						<td class="p-4 max-w-4">@Html.DisplayFor(modelitem => file.Created)</td>
 					</tr>
 				}
 			</tbody>
@@ -126,9 +126,10 @@
 						<label for="Folder" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Select a Folder</label>
 						<select id="Folder" name="Folder" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
 							<option selected value="0">Root</option>
-							<option value="1">Pictures</option>
-							<option value="2">Videos</option>
-							<option value="3">Music</option>
+							@foreach (var folder in Model.Folders)
+							{
+								<option selected value="@folder.FileId">@folder.FileName</option>
+							}
 						</select>
 						<input class="block w-full text-sm font-medium text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
 						   id="Files" name="Files" type="file" multiple="multiple" required>
