--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@model FiDa.DatabaseModels.Account
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -18,6 +19,7 @@
 		</div>
 		<div class="m-auto text-2xl font-semibold">Organize Your Files</div>
 		<div class="my-auto px-6">
+			Hello @User.Identity?.Name
 			<img src="/Public/Avatar.png" alt="CN" width="100" height="100"
 				 class="relative flex h-10 w-10 shrink-0 overflow-hidden rounded-full" />
 		</div>
@@ -26,33 +28,28 @@
 	<div class="flex min-h-full min-w-full">
 		<nav class="border-r-2 border-slate-600 h-screen min-w-72 p-6">
 			<div class="grid grid-cols-1 gap-2">
-				<a key="PCloud" href="/PCloud"
+				@foreach (var userHost in Model.ConfiguredHosts)
+				{
+					<a key="@userHost.Host" href="@userHost.Host.ToString()"
 				   class=" text-xl font-semibold hover:bg-slate-600 p-2 hover:cursor-pointer rounded-md active:ring-2 active:bg-slate-600 focus-within:bg-slate-600 focus-within:ring-2 ring-slate-200">
-					<div class="flex justify-between">
-						pCLoud
-						<div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-[#2563eb] text-[#f8fafc] hover:bg-[#2563eb]/80">
-							123
+						<div class="flex justify-between">
+							@userHost.Host.ToString()
+							<div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-[#2563eb] text-[#f8fafc] hover:bg-[#2563eb]/80">
+								123
+							</div>
 						</div>
+					</a>
+				}
+				<button key="newHost" class="bg-blue-600 text-xl font-semibold hover:bg-blue-400 p-2 hover:cursor-pointer rounded-md active:ring-2 active:bg-blue-800 focus-within:bg-blue-800 focus-within:ring-2 ring-slate-200">
+					<div class="flex justify-between items-center">
+						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24" overflow="visible" xml:space="preserve" class="size-6">
+						<g id="Icon" fill="currentColor">
+						<path d="M21,13h-8v8h-2v-8H3v-2h8V3h2v8h8V13z" />
+						</g>
+						</svg>
+						Configure a new Host
 					</div>
-				</a>
-				<a key="Dropbox" href="/Dropbox"
-				   class="text-xl font-semibold hover:bg-slate-600 p-2 hover:cursor-pointer rounded-md active:ring-2 active:bg-slate-600 focus-within:bg-slate-600 focus-within:ring-2 ring-slate-200">
-					<div class="flex justify-between">
-						Dropbox
-						<div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-[#2563eb] text-[#f8fafc] hover:bg-[#2563eb]/80">
-							123
-						</div>
-					</div>
-				</a>
-				<a key="Onedrive" href="/Onedrive"
-				   class="text-xl font-semibold hover:bg-slate-600 p-2 hover:cursor-pointer rounded-md active:ring-2 active:bg-slate-600 focus-within:bg-slate-600 focus-within:ring-2 ring-slate-200">
-					<div class="flex justify-between">
-						One Drive
-						<div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-[#2563eb] text-[#f8fafc] hover:bg-[#2563eb]/80">
-							123
-						</div>
-					</div>
-				</a>
+				</button>
 			</div>
 		</nav>
 		<main role="main" class="min-h-full p-4 w-full">
