--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -54,18 +54,15 @@
 				<!-- Dropdown menu -->
 				<div id="dropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
 					<ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton">
-						<li>
-							<a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">PCloud</a>
-						</li>
-						<li>
-							<a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dropbox</a>
-						</li>
-						<li>
-							<a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">OneDrive</a>
-						</li>
-						<li>
-							<a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Google Drive</a>
-						</li>
+						@foreach (var host in (FiDa.DatabaseModels.Hosts[])Enum.GetValues(typeof(FiDa.DatabaseModels.Hosts)))
+						{
+							if (Model.ConfiguredHosts.FirstOrDefault((h) => h.Host == host) == null)
+							{
+								<li>
+									<a href="/config/@host.ToString().ToLower()" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">@host.ToString()</a>
+								</li>
+							}
+						}
 					</ul>
 				</div>
 
