--- a/Views/Shared/Components/StorageUsage/StorageUsage.cshtml
+++ b/Views/Shared/Components/StorageUsage/StorageUsage.cshtml
@@ -1,28 +1,34 @@
 ﻿@model FiDa.ViewModels.StorageUsageModel
 @{
-	var per = Math.Round((@Model.Used / @Model.Free) * 100, 2);
-	var perString = per.ToString().Replace(",", ".");
+    var per = Math.Round((@Model.Used / @Model.Free) * 100, 2);
+    var perString = per.ToString().Replace(",", ".");
 }
 <a href="@Url.Action("Index", @Model.Host.Host.ToString().ToLower())" class="block max-w-xs p-6 bg-white border border-gray-200 rounded-lg shadow hover:scale-[1.025] transition-all duration-500  dark:bg-gray-800 dark:border-gray-700 hover:cursor-pointer">
-	<div class="flex justify-between mb-1">
-		<span class="text-2xl font-bold text-blue-700 dark:text-white">@Model.Host.Host</span>
-		<span class="text-large font-medium text-blue-700 dark:text-white">@Model.Used.ToString().Replace(",", ".") of @Model.Free.ToString().Replace(",", ".") GB</span>
-	</div>
-	<div class="w-full bg-gray-200 rounded-full dark:bg-gray-700">
-		@switch (per)
-		{
-			case > 50 and < 75:
-				<div class="bg-green-600 text-xs font-medium text-blue-100 text-center p-0.5 leading-none rounded-full" style="width: @perString%">@perString%</div>
-				break;
-			case > 75 and < 90:
-				<div class="bg-yellow-600 text-xs font-medium text-blue-100 text-center p-0.5 leading-none rounded-full" style="width: @perString%">@perString%</div>
-				break;
-			case > 90:
-				<div class="bg-red-600 text-xs font-medium text-blue-100 text-center p-0.5 leading-none rounded-full" style="width: @perString%">@perString%</div>
-				break;
-			default:
-				<div class="bg-blue-600 text-xs font-medium text-blue-100 text-center p-0.5 leading-none rounded-full" style="width: @perString%">@perString%</div>
-				break;
-		}
-	</div>
+    <div class="flex justify-between mb-1">
+        <span class="text-2xl font-bold text-blue-700 dark:text-white">@Model.Host.Host</span>
+        <span class="text-large font-medium text-blue-700 dark:text-white">@Model.Used.ToString().Replace(",", ".") of @Model.Free.ToString().Replace(",", ".") GB</span>
+    </div>
+    <div class="w-full bg-gray-200 rounded-full dark:bg-gray-700">
+        @switch (per)
+        {
+            case > 50 and < 75:
+                <div class="bg-green-600 text-xs font-medium text-blue-100 text-center p-0.5 leading-none rounded-full" style="width: @perString%">@perString%</div>
+                break;
+            case > 75 and < 90:
+                <div class="bg-yellow-600 text-xs font-medium text-blue-100 text-center p-0.5 leading-none rounded-full" style="width: @perString%">@perString%</div>
+                break;
+            case > 90:
+                <div class="bg-red-600 text-xs font-medium text-blue-100 text-center p-0.5 leading-none rounded-full" style="width: @perString%">@perString%</div>
+                break;
+            default:
+                <div class="bg-blue-600 text-xs font-medium text-blue-100 text-center p-0.5 leading-none rounded-full" style="width: @perString%">@perString%</div>
+                break;
+        }
+    </div>
+    <span class="text-xs pt-1 ml-auto flex items-center">
+        Go To
+        <svg class="size-5 pl-1" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M5 12H19M19 12L13 6M19 12L13 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+    </span>
 </a>
